Kubernetes/wso2/ingress/test-https-ingress-wso.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-ingress
  namespace: test-env
  annotations:
    environment: Test
    owner: pokatilov-ov
    project: WSO2-K8s-Project
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: wso2am.wso2-k8s-test-env.pp.ua
    http:
        paths:
          - pathType: Prefix
            path: /carbon
            backend:
              service:
                name: wso-api-manager
                port:
                  number: 30002
          - pathType: Prefix
            path: /devportal
            backend:
              service:
                name: wso-api-manager
                port:
                  number: 30002
          - pathType: Prefix
            path: /publisher
            backend:
              service:
                name: wso-api-manager
                port:
                  number: 30002
  - host: wso2eii.wso2-k8s-test-env.pp.ua
    http:
        paths:
          - pathType: Prefix
            path: /carbon
            backend:
              service:
                name: wso-ei-integrator
                port:
                  number: 30001
